force-app/main/default/objects/ContentVersion/fields/Folder__c.field-meta.xml
<CustomField>
    <fullName>Folder__c</fullName>
    <description>Folder structure where the salestori installation cards are present</description>
    <label>Folder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>