force-app/main/default/objects/ContentVersion/fields/loadPDF__c.field-meta.xml
<CustomField>
    <fullName>loadPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>loadPDF</label>
    <type>Checkbox</type>
</CustomField>