force-app/main/default/objects/ContentVersion/fields/RVN_Number__c.field-meta.xml
<CustomField>
    <fullName>RVN_Number__c</fullName>
    <label>RVN Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>